compiler/tests/safety/success/arm-m4/carry_flags.jazz
export
fn test() -> reg u32 {
  reg bool cf;
  reg u32 i;

  i = 1;
  cf, i -= 1;
  if (cf){
    while (true) { i += 1;}
  }

  i = 0;
  cf, i -= 1;
  if (!cf){
    while (true) { i += 1;}
  }

  return i;
}
